# xilinx-boot-gen-tool

./: .gitignore  CMakeLists.txt  Makefile.ori  cdo-alloc.h
inc/: config.h
src/: authentication-zynqmp.cpp
